Connect to cloudant

--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,7 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile group: 'com.cloudant', name:'cloudant-client', version: '2.7.0'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	
 }
